[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tfm"
version = "0.3.3-ALPHA"
authors = [
  { name="Till Mahlburg", email="mahlburg@posteo.de" },
]
description = "A simple and Qt file manager for Linux"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"pyside6",
	"humanize",
	"pyudev",
	"rarfile"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Desktop Environment :: File Managers",
]

[project.urls]
Homepage = "https://github.com/tmahlburg/tfm"
Issues = "https://github.com/tmahlburg/tfm/issues"

[project.scripts]
tfm = "tfm.__main__:main"
